// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Label should be rendered 1`] = `
<div
  className="input-image "
  has-file="false"
  is-drag={null}
  onClick={[Function]}
>
  <input
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    type="file"
  />
</div>
`;

exports[`Label should render with className 1`] = `
<div
  className="input-image my-custom-class-name"
  has-file="false"
  is-drag={null}
  onClick={[Function]}
>
  <input
    multiple={false}
    onChange={[Function]}
    onClick={[Function]}
    onDragEnter={[Function]}
    onDragLeave={[Function]}
    type="file"
  />
</div>
`;
